client/src/Components/Styles/Layout/_authForm.scss
.authForm{
    grid-column: center-start / center-end;
    grid-row: center-logo-start;

padding: 3rem;
padding-top: 1rem;
display: flex;
flex-direction: column;
height: 32vh;

    &_close{
        align-self: flex-end;
        cursor: pointer;
        &:hover{
            transform: translateY(-.2rem) scale(1.15);
        }
    }

    & input{
        display: block;
        padding-left: .5rem;
        margin: 1rem 0;
        width: 90%;
        height: 4rem;
        z-index: 2;
        background-color: rgba(2, 226, 255, 0);
        border: .25rem solid rgb(0, 168, 247);
        border-radius: .5rem;
        
        &:focus{
            outline: none;
        }
    }

    & label{
        display: inline-block;
        width: .5rem;
        transform: translateY(-4rem) translateX(.5rem);
    }

    & input:focus + label,
    & input:not([value=""]) + label
    {
        transform: translateY(-7.5rem);


    }

    & input:invalid{
        background-color: rgba(255, 60, 0, 0.2);
    }

    & h2{
        text-align: center;
    }

}


@include respond('sm-tab'){
    .authForm{
        
        & input:focus + label,
        & input:not([value=""]) + label
        {
            transform: translateY(-6.5rem);
        }
    }
}

@include respond('lg-phone'){

    .authForm{
        height: 40vh;

        & label{
            transform: translateY(-3.5rem) translateX(.5rem);
        }

        & input:focus + label,
        & input:not([value=""]) + label
        {
            transform: translateY(-6.5rem);
        }
    }

}

